--- a/data/cards/04606229.yaml
+++ b/data/cards/04606229.yaml
@@ -8,7 +8,7 @@ name:
   it: Ultima Speranza Numeri
   pt: Última Esperança dos Números
   ja: <ruby>最後の希望<rt>ラストホープ・ナンバーズ</rt></ruby>
-  ja_romaji: Rasutohōpu Nanbāzu
+  ja_romaji: Rasuto Hōpu Nanbāzu
   ko:
   ko_rr:
   zh-TW:
