--- a/data/cards/25801745.yaml
+++ b/data/cards/25801745.yaml
@@ -1,7 +1,7 @@
 konami_id: 19474
 password: 25801745
 name:
-  en: Novox, the Voiceless Voice Disciple
+  en: Lo, the Prayers of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声之祈祷者 律
 text:
   en: |-
-    If you Ritual Summon exactly 1 LIGHT Warrior or Dragon Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire Tribute. You can only use each of the following effects of "Novox, the Voiceless Voice Disciple" once per turn. If this card is Normal or Special Summoned: You can place 1 "Voiceless Voice" Continuous Spell/Trap from your Deck face-up in your Spell & Trap Zone. If a LIGHT Warrior or Dragon Ritual Monster(s) is Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can Special Summon this card.
+    If you Ritual Summon exactly 1 LIGHT Ritual Monster (Warrior or Dragon) with a card effect that requires use of monsters, this card can be used as the entire Tribute. You can only use each of the following effects of "Lo, the Prayers of the Voiceless Voice" once per turn. If this card is Normal or Special Summoned: You can place 1 "Voiceless Voice" Continuous Spell/Trap from your Deck face-up in your Spell & Trap Zone. If a LIGHT Ritual Monster (Warrior or Dragon) is Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can Special Summon this card.
   de:
   es:
   fr:
@@ -41,8 +41,38 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: NovoxtheVoicelessVoiceDisciple-PHNI-JP-SR.png
+  image: LothePrayersoftheVoicelessVoice-PHNI-JP-SR.png
 sets:
+  en:
+  - set_number: PHNI-EN019
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE019
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR019
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT019
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT019
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP019
     set_name: Phantom Nightmare
@@ -82,9 +112,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012073
