--- a/data/cards/52472775.yaml
+++ b/data/cards/52472775.yaml
@@ -1,7 +1,7 @@
 konami_id: 19521
 password: 52472775
 name:
-  en: Voiceless Voice Prayer
+  en: Prayers of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声祈祷
 text:
   en: |-
-    This card can be used to Ritual Summon any LIGHT Ritual Monster. You must also Tribute LIGHT monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. If a face-up LIGHT Ritual Monster(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your GY; Special Summon 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", or "Skull Guardian, the Voiceless Voice Protector" from your hand or Deck, ignoring its Summoning conditions. You can only use this effect of "Voiceless Voice Prayer" once per turn.
+    This card can be used to Ritual Summon any LIGHT Ritual Monster. You must also Tribute LIGHT monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster. If a face-up LIGHT Ritual Monster(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your GY; Special Summon 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", or "Skull Guardian, Protector of the Voiceless Voice" from your hand or Deck, ignoring its Summoning conditions. You can only use this effect of "Prayers of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,28 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: VoicelessVoicePrayer-PHNI-JP-C.png
+  image: PrayersoftheVoicelessVoice-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN066
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE066
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR066
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT066
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT066
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP066
     set_name: Phantom Nightmare
@@ -56,9 +76,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012081
