--- a/data/cards/86310763.yaml
+++ b/data/cards/86310763.yaml
@@ -1,7 +1,7 @@
 konami_id: 19531
 password: 86310763
 name:
-  en: Voiceless Voice Authority
+  en: Radiance of the Voiceless Voice
   de:
   es:
   fr:
@@ -16,9 +16,9 @@ name:
 text:
   en: |-
     During the Main Phase: You can activate 1 of these effects.
-    ● Shuffle 1 LIGHT Warrior or Dragon Ritual Monster or 1 Ritual Spell from your hand or GY into the Deck, and if you do, take 1 "Voiceless Voice" monster from your Deck, and either add it to your hand or Special Summon it.
-    ● Target cards your opponent controls, up to the number of LIGHT Warrior and Dragon Ritual Monsters you control; destroy both them and this card.
-    You can only use this effect of "Voiceless Voice Authority" once per turn.
+    ● Shuffle 1 LIGHT Ritual Monster (Warrior or Dragon) or 1 Ritual Spell from your hand or GY into the Deck, and if you do, add to your hand, or Special Summon, 1 "Voiceless Voice" monster from your Deck.
+    ● Target cards your opponent controls, up to the number of LIGHT Ritual Monsters (Warrior and Dragon) you control; destroy both this card and as many of the targeted cards as possible.
+    You can only use this effect of "Radiance of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,28 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: VoicelessVoiceAuthority-PHNI-JP-C.png
+  image: RadianceoftheVoicelessVoice-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN076
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE076
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR076
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT076
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT076
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP076
     set_name: Phantom Nightmare
@@ -60,9 +80,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012091
