--- a/data/cards/88284599.yaml
+++ b/data/cards/88284599.yaml
@@ -1,7 +1,7 @@
 konami_id: 19476
 password: 88284599
 name:
-  en: Sauravis, the Sagely Voiceless Voice Dragon
+  en: Sauravis, Dragon Sage of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声之龙贤圣 萨拉维思
 text:
   en: |-
-    You can Special Summon this card (from your hand) by shuffling 2 Spells from your hand and/or GY into the Deck, including at least 1 Ritual Spell. You can only Special Summon "Sauravis, the Sagely Voiceless Voice Dragon" once per turn this way. When your opponent activates a card or effect (Quick Effect): You can return this card to the hand; Special Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand or Deck, but shuffle it into the Deck during the End Phase of the next turn. You can only use this effect of "Sauravis, the Sagely Voiceless Voice Dragon" once per turn.
+    You can Special Summon this card (from your hand) by shuffling 2 Spells from your hand and/or GY into the Deck, including a Ritual Spell. You can only Special Summon "Sauravis, Dragon Sage of the Voiceless Voice" once per turn this way. When your opponent activates a card or effect (Quick Effect): You can return this card from the field to the hand; Special Summon 1 LIGHT Ritual Monster (Warrior or Dragon) from your hand or Deck, but shuffle it into the Deck during the End Phase of the next turn. You can only use this effect of "Sauravis, Dragon Sage of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,28 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: SauravistheSagelyVoicelessVoiceDragon-PHNI-JP-C.png
+  image: SauravisDragonSageoftheVoicelessVoice-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN021
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE021
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR021
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT021
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT021
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP021
     set_name: Phantom Nightmare
@@ -60,9 +80,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012077
