--- a/data/cards/94940436.yaml
+++ b/data/cards/94940436.yaml
@@ -8,7 +8,7 @@ name:
   it: Circolo Magnetico LV2
   pt:
   ja: <ruby>磁力の召喚円<rt>マグネットサークル</rt></ruby> <ruby>ＬＶ<rt>レベル</rt></ruby>２
-  ja_romaji: Magunetto Sākuru Reberu Tsu
+  ja_romaji: Magunetto Sākuru Reberu Tsū
   ko: 마그넷 서클 LV2
   ko_rr:
   zh-TW:
