--- a/data/cards/98477480.yaml
+++ b/data/cards/98477480.yaml
@@ -1,7 +1,7 @@
 konami_id: 19522
 password: 98477480
 name:
-  en: Voiceless Voice Barrier
+  en: Barrier of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声结界
 text:
   en: |-
-    While you control "Novox, the Voiceless Voice Disciple" and a LIGHT Ritual Monster, your opponent's monsters can only target Ritual Monsters for attacks, also your opponent cannot target LIGHT monsters you control with card effects. During your Main Phase: You can add 1 "Voiceless Voice" card or 1 "Skull Guardian" Ritual Monster from your Deck to your hand, except "Voiceless Voice Barrier". You can only use this effect of "Voiceless Voice Barrier" once per turn.
+    While you control "Lo, the Prayers of the Voiceless Voice" and a LIGHT Ritual Monster, your opponent's monsters can only target Ritual Monsters for attacks, also your opponent cannot target LIGHT monsters you control with card effects. During your Main Phase: You can add 1 "Voiceless Voice" card or 1 "Skull Guardian" Ritual Monster from your Deck to your hand, except "Barrier of the Voiceless Voice". You can only use this effect of "Barrier of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,28 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: VoicelessVoiceBarrier-PHNI-JP-R.png
+  image: BarrieroftheVoicelessVoice-PHNI-JP-R.png
 sets:
+  en:
+  - set_number: PHNI-EN067
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE067
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR067
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT067
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT067
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP067
     set_name: Phantom Nightmare
@@ -56,9 +76,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012083
