--- a/data/cards/10774240.yaml
+++ b/data/cards/10774240.yaml
@@ -1,7 +1,7 @@
 konami_id: 19492
 password: 10774240
 name:
-  en: Skull Guardian, the Voiceless Voice Protector
+  en: Skull Guardian, Protector of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声保卫者 律守护者
 text:
   en: |-
-    You can Ritual Summon this card with "Voiceless Voice Prayer". Gains 2050 ATK while "Novox, the Voiceless Voice Disciple" is on your field or in your GY. You can only use each of the following effects of "Skull Guardian, the Voiceless Voice Protector" once per turn. If this card is Ritual Summoned: You can add 1 "Voiceless Voice" monster, or 1 Warrior or Dragon Ritual Monster, from your Deck to your hand. When your opponent activates a card or effect while you control "Novox, the Voiceless Voice Disciple" (Quick Effect): You can negate the activation, and if you do, destroy that card.
+    You can Ritual Summon this card with "Prayers of the Voiceless Voice". Gains 2050 ATK while you have "Lo, the Prayers of the Voiceless Voice" on your field or in your GY. You can only use each of the following effects of "Skull Guardian, Protector of the Voiceless Voice" once per turn. If this card is Ritual Summoned: You can add 1 "Voiceless Voice" monster, or 1  Ritual Monster (Warrior or Dragon), from your Deck to your hand. When your opponent activates a card or effect while you control "Lo, the Prayers of the Voiceless Voice" (Quick Effect): You can negate the activation, and if you do, destroy that card.
   de:
   es:
   fr:
@@ -40,15 +40,45 @@ attribute: LIGHT
 level: 7
 atk: 2050
 def: 2500
-ritual_spell: Voiceless Voice Prayer
+ritual_spell: Prayers of the Voiceless Voice
 series:
 - Guardian
 - Skull Guardian
 - Voiceless Voice
 images:
 - index: 1
-  image: SkullGuardiantheVoicelessVoiceProtector-PHNI-JP-UR.png
+  image: SkullGuardianProtectoroftheVoicelessVoice-PHNI-JP-UR.png
 sets:
+  en:
+  - set_number: PHNI-EN037
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE037
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR037
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT037
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT037
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP037
     set_name: Phantom Nightmare
@@ -91,9 +121,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012079
