--- a/data/cards/48017189.yaml
+++ b/data/cards/48017189.yaml
@@ -38,7 +38,7 @@ atk: 800
 def: 0
 images:
 - index: 1
-  image: EMPMeowmine-PHNI-JP-R.png
+  image: EMPMeowmine-PHNI-EN-1E-OP.png
 sets:
   en:
   - set_number: PHNI-EN032
