--- a/data/cards/51296484.yaml
+++ b/data/cards/51296484.yaml
@@ -1,7 +1,7 @@
 konami_id: 19475
 password: 51296484
 name:
-  en: Saffira, the Wise Voiceless Voice Queen
+  en: Saffira, Dragon Queen of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声之龙贤姬 萨菲拉
 text:
   en: |-
-    You can discard this card; send 1 Ritual Spell from your Deck to the GY, then you can add 1 LIGHT Warrior or Dragon Ritual Monster from your Deck or GY to your hand. You can banish this card from your GY; Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. You can only use each effect of "Saffira, the Wise Voiceless Voice Queen" once per turn.
+    You can discard this card; send 1 Ritual Spell from your Deck to the GY, then you can add 1 LIGHT Ritual Monster (Warrior or Dragon) from your Deck or GY to your hand. You can banish this card from your GY; Ritual Summon 1 LIGHT Ritual Monster (Warrior or Dragon) from your hand, by Tributing monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster. You can only use each effect of "Saffira, Dragon Queen of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,38 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: SaffiratheWiseVoicelessVoiceQueen-PHNI-JP-R.png
+  image: SaffiraDragonQueenoftheVoicelessVoice-PHNI-JP-R.png
 sets:
+  en:
+  - set_number: PHNI-EN020
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE020
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR020
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT020
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT020
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP020
     set_name: Phantom Nightmare
@@ -67,9 +97,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012075
