--- a/data/cards/yugipedia1034528.yaml
+++ b/data/cards/yugipedia1034528.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Saffira, the Voiceless Voice Deity of Dragons
+  en: Saffira, Dragon Deity of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with "Voiceless Voice Blessing". If this card is Ritual Summoned and you have "Lo, the Prayers of the Voiceless Voice" on your field or GY: You can draw 2 cards, then discard 1 card. When an attack is declared involving a LIGHT Ritual Monster (Warrior or Dragon): You can discard 1 random card from your opponent's hand. During your opponent's End Phase: You can add 1 LIGHT monster from your GY to your hand. You can only use each effect of "Saffira, the Voiceless Voice Deity of Dragons" once per turn.
+    You can Ritual Summon this card with "Blessing of the Voiceless Voice". If this card is Ritual Summoned and you have "Lo, the Prayers of the Voiceless Voice" on your field or GY: You can draw 2 cards, then discard 1 card. When an attack is declared involving a LIGHT Ritual Monster (Warrior or Dragon): You can discard 1 random card from your opponent's hand. During your opponent's End Phase: You can add 1 LIGHT monster from your GY to your hand. You can only use each effect of "Saffira, Dragon Deity of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: SaffiratheVoicelessVoiceDeityofDragons-LEDE-JP-OP.png
+  image: SaffiraDragonDeityoftheVoicelessVoice-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP034
