--- a/data/cards/yugipedia1034529.yaml
+++ b/data/cards/yugipedia1034529.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Voiceless Voice Blessing
+  en: Blessing of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can target 1 of your "Voiceless Voice" cards that is banished or in your GY, except "Voiceless Voice Blessing"; add it to your hand. If a non-Ritual Monster(s) is Normal or Special Summoned face-up: You can Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand and/or field whose total Levels equal or exceed the Ritual Monster's Level, and if you do, it cannot be destroyed by battle. You can only use each effect of "Voiceless Voice Blessing" once per turn.
+    You can target 1 of your "Voiceless Voice" cards that is banished or in your GY, except "Blessing of the Voiceless Voice"; add it to your hand. If a non-Ritual Monster(s) is Normal or Special Summoned face-up: You can Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand and/or field whose total Levels equal or exceed the Ritual Monster's Level, and if you do, it cannot be destroyed by battle. You can only use each effect of "Blessing of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -31,7 +31,7 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: VoicelessVoiceBlessing-LEDE-JP-OP.png
+  image: BlessingoftheVoicelessVoice-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP062
