--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -1,3 +1,15 @@
+- en: Ashened
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Mokey Mokey
   de: Mokey Mokey
   es: Mokey Mokey
