--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1,3 +1,15 @@
+Ashened:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Mokey Mokey:
   de: Mokey Mokey
   es: Mokey Mokey
