--- a/data/cards/24079759.yaml
+++ b/data/cards/24079759.yaml
@@ -1,7 +1,7 @@
 konami_id: 19463
 password: 24079759
 name:
-  en: Goblin Biker Dug the Assaulter
+  en: Goblin Biker Dugg Charger
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 格布林百罗刹 特攻达格
 text:
   en: |-
-    If this card is in your hand: You can detach 1 material from a monster on the field, and if you do, Special Summon this card. If this card is Normal or Special Summoned: You can add 1 "Goblin Biker" Spell/Trap from your Deck to your hand. You can only use each effect of "Goblin Biker Dug the Assaulter" once per turn.
+    If this card is in your hand: You can detach 1 Xyz Material from a monster on either field, and if you do, Special Summon this card. If this card is Normal or Special Summoned: You can add 1 "Goblin Biker" Spell/Trap from your Deck to your hand. You can only use each effect of "Goblin Biker Dugg Charger" once per turn.
   de:
   es:
   fr:
@@ -41,8 +41,38 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerDugtheAssaulter-PHNI-JP-SR.png
+  image: GoblinBikerDuggCharger-PHNI-JP-SR.png
 sets:
+  en:
+  - set_number: PHNI-EN008
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE008
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR008
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT008
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT008
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP008
     set_name: Phantom Nightmare
@@ -82,9 +112,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019548
