--- a/data/cards/27868563.yaml
+++ b/data/cards/27868563.yaml
@@ -1,7 +1,7 @@
 konami_id: 19465
 password: 27868563
 name:
-  en: Goblin Biker Boon the Machspeed
+  en: Goblin Biker Boom Mach
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 格布林百罗刹 神速布恩
 text:
   en: |-
-    During the Main Phase, if this card is in your hand or GY (Quick Effect): You can detach 1 material from a monster on the field, and if you do, Special Summon this card. Until the end of the next turn after this effect resolves, you cannot Special Summon "Goblin Biker Boon the Machspeed".
+    Once per Chain, during the Main Phase, if this card is in your hand or GY (Quick Effect): You can detach 1 Xyz Material from a monster on either field, and if you do, Special Summon this card, also you cannot Special Summon "Goblin Biker Boom Mach" until the end of the next turn.
   de:
   es:
   fr:
@@ -39,8 +39,28 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerBoontheMachspeed-PHNI-JP-C.png
+  image: GoblinBikerBoomMach-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN010
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE010
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR010
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT010
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT010
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP010
     set_name: Phantom Nightmare
@@ -59,9 +79,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019554
