--- a/data/cards/34001672.yaml
+++ b/data/cards/34001672.yaml
@@ -1,7 +1,7 @@
 konami_id: 19502
 password: 34001672
 name:
-  en: Goblin Biker Big-Head Gabonga
+  en: Goblin Biker Big Gabonga
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 3 monsters
-    If this card is Xyz Summoned: You can add 1 "Goblin" monster from your Deck to your hand. If a material(s) is detached from a monster(s) on the field (except during the Damage Step): You can target 1 other face-up monster on the field; attach it to this card as material. During the End Phase: You can attach 1 "Goblin" monster from your Deck to this card as material. You can only use each effect of "Goblin Biker Big-Head Gabonga" once per turn.
+    If this card is Xyz Summoned: You can add 1 "Goblin" monster from your Deck to your hand. If material is detached from a monster(s) on the field (except during the Damage Step): You can target 1 face-up monster on the field, except this card; attach it to this card as material. During the End Phase: You can attach 1 "Goblin" monster from your Deck to this card as material. You can only use each effect of "Goblin Biker Big Gabonga" once per turn.
   de:
   es:
   fr:
@@ -47,8 +47,38 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerBigHeadGabonga-PHNI-JP-UR.png
+  image: GoblinBikerBigGabonga-PHNI-JP-UR.png
 sets:
+  en:
+  - set_number: PHNI-EN047
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE047
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR047
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT047
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT047
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP047
     set_name: Phantom Nightmare
@@ -91,9 +121,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019546
