--- a/data/cards/51473858.yaml
+++ b/data/cards/51473858.yaml
@@ -1,7 +1,7 @@
 konami_id: 19464
 password: 51473858
 name:
-  en: Goblin Biker Clutter the Noisy
+  en: Goblin Biker Clatter Sploder
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 格布林百罗刹 爆音克拉塔
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can target 1 "Goblin" monster in your GY, except "Goblin Biker Clutter the Noisy"; Special Summon it. During your opponent's Main Phase, if this card is in your GY (Quick Effect): You can detach 1 material from a monster on the field, and if you do, Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Goblin Biker Clutter the Noisy" once per turn.
+    If this card is Normal or Special Summoned: You can target 1 "Goblin" monster in your GY, except "Goblin Biker Clatter Sploder"; Special Summon it. During your opponent's Main Phase, if this card is in your GY (Quick Effect): You can detach 1 Xyz Material from a monster on either field, and if you do, Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Goblin Biker Clatter Sploder" once per turn.
   de:
   es:
   fr:
@@ -41,8 +41,28 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerCluttertheNoisy-PHNI-JP-C.png
+  image: GoblinBikerClatterSploder-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN009
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE009
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR009
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT009
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT009
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP009
     set_name: Phantom Nightmare
@@ -61,9 +81,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019552
