--- a/data/cards/64257161.yaml
+++ b/data/cards/64257161.yaml
@@ -1,7 +1,7 @@
 konami_id: 19466
 password: 64257161
 name:
-  en: Goblin Biker Mianda the Coldblooded
+  en: Goblin Biker Mean Merciless
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 格布林百罗刹 冷血米安达
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can Special Summon 1 "Goblin" monster from your hand, except "Goblin Biker Mianda the Coldblooded". If this card is in your GY: You can detach 1 material from a monster on the field, and if you do, Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Goblin Biker Mianda the Coldblooded" once per turn.
+    If this card is Normal or Special Summoned: You can Special Summon 1 "Goblin" monster from your hand, except "Goblin Biker Mean Merciless". During your Main Phase, if this card is in your GY: You can detach 1 Xyz Material from a monster on either field, and if you do, Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Goblin Biker Mean Merciless" once per turn.
   de:
   es:
   fr:
@@ -41,8 +41,28 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerMiandatheColdblooded-PHNI-JP-R.png
+  image: GoblinBikerMeanMerciless-PHNI-JP-R.png
 sets:
+  en:
+  - set_number: PHNI-EN011
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE011
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR011
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT011
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT011
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP011
     set_name: Phantom Nightmare
@@ -61,9 +81,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019556
