--- a/data/cards/64327901.yaml
+++ b/data/cards/64327901.yaml
@@ -1,7 +1,7 @@
 konami_id: 19515
 password: 64327901
 name:
-  en: Grand Meeting of the Goblin Bikers
+  en: Goblin Biker Grand Bash
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN: 格布林百罗刹大集会
 text:
   en: |-
-    "Goblin" monsters you control gain 300 ATK for each "Goblin" monster you control. During your Main Phase, you can Normal Summon 1 "Goblin" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can target 2 "Goblin" monsters you control that have a Level, then activate 1 of these effects;
-    ● The Level of 1 of them becomes the Level of the other.
-    ● The Levels of both monsters become their combined original Levels.
-    You can only use this effect of "Grand Meeting of the Goblin Bikers" once per turn.
+    "Goblin" monsters you control gain 300 ATK for each "Goblin" monster you control. During your Main Phase, you can Normal Summon 1 "Goblin" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can target 2 "Goblin" monsters you control, then activate 1 of these effects;
+    ● Make the Level of 1 of the monsters become the current Level of the other.
+    ● Both of their Levels become their combined original Levels.
+    You can only use this effect of "Goblin Biker Grand Bash" once per turn.
   de:
   es:
   fr:
@@ -47,8 +47,38 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GrandMeetingoftheGoblinBikers-PHNI-JP-C.png
+  image: GoblinBikerGrandBash-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN060
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE060
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR060
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT060
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT060
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP060
     set_name: Phantom Nightmare
@@ -67,9 +97,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019558
