--- a/rush.yaml
+++ b/rush.yaml
@@ -104368,7 +104368,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon monsters with 0 DEF from your Graveyard equal to [the number of monsters revealed to meet the requirement] to your field in face-down Defense Position. If you do, you cannot Normal Summon Level 9 or lower monsters, nor Set monsters from your hand, until the end of this turn.
+    Special Summon monsters with 0 DEF from your Graveyard equal to [the number of monsters revealed to meet the requirement] to your field in face-down Defense Position. If you do, until the end of this turn, you cannot Normal Summon Level 9 or lower monsters, nor Set monsters from your hand.
   de:
   es:
   fr:
@@ -132698,7 +132698,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or 8 DARK Attribute monster from your Graveyard face-up to your field. If you do, until the end of this turn, you can only Special Summon "Jointech Tridynabase", and you cannot activate the effects of DARK Attribute monsters.
+    Special Summon 1 Level 7 or 8 DARK Attribute monster from your Graveyard face-up to your field. If you do, until the end of this turn, you can only Special Summon "Jointech Tridynabase", and cannot activate the effects of DARK Attribute monsters.
   de:
   es:
   fr:
@@ -132826,7 +132826,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If this card attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). This card can make up to 3 attacks during the turn it was Fusion Summoned by sending monsters whose original names are "Voidvelgr Requiem" and "Abysslayer Leviaknight" to the Graveyard as material.
+    If this card attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). This card can make a second and third attack during the turn it was Fusion Summoned by sending monsters whose original names are "Voidvelgr Requiem" and "Abysslayer Leviaknight" to the Graveyard as material.
   de:
   es:
   fr:
