--- a/data/cards/47195442.yaml
+++ b/data/cards/47195442.yaml
@@ -36,6 +36,7 @@ attribute: EARTH
 rank: 4
 atk: 0
 def: 2600
+materials: 2 or more Level 4 monsters
 images:
 - index: 1
   image: QuartetWonky-24PR-JP-NPR.png
