--- a/data/cards/30095833.yaml
+++ b/data/cards/30095833.yaml
@@ -72,6 +72,7 @@ pendulum_effect:
     此卡名的鐘擺效果，１回合僅限使用１次。①：可在我方主要階段發動。特殊召喚此卡。其後，可從我方墓地選擇１隻闇屬性怪獸，重疊至此卡下方做為超量素材。
   zh-CN: |-
     这个卡名的灵摆效果1回合只能使用1次。①：自己的主要阶段可以发动。将这张卡特殊召唤。那之后，可以从自己的墓地选1只暗属性怪兽叠放在这张卡下面作为多维素材。
+materials: 2 Level 7 Pendulum Monsters
 series:
 - Odd-Eyes
 - Rebellion
