--- a/data/cards/yugipedia1040350.yaml
+++ b/data/cards/yugipedia1040350.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Technalogue - Valdrath
+  en: Decanelogue - Valdrath
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Level 10 monsters
-    When your opponent activates a card or effect (Quick Effect): You can detach 1 material from this card; negate the activation, then you can detach 1 material from this card, then destroy 1 card on the field. At the start of the Damage Step, if this card with material attacks: You can destroy 1 card on the field. If this Xyz Summoned card is destroyed: You can destroy 1 card on the field. You can only use each effect of "Technalogue - Valdrath" once per turn.
+    When your opponent activates a card or effect (Quick Effect): You can detach 1 material from this card; negate the activation, then you can detach 1 material from this card, then destroy 1 card on the field. At the start of the Damage Step, if this card with material attacks: You can destroy 1 card on the field. If this Xyz Summoned card is destroyed: You can destroy 1 card on the field. You can only use each effect of "Decanelogue - Valdrath" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ def: 3000
 materials: 2 or more Level 10 monsters
 images:
 - index: 1
-  image: TechnalogueValdrath-LEDE-JP-OP.png
+  image: DecanelogueValdrath-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP045
