--- a/data/cards/yugipedia1040350.yaml
+++ b/data/cards/yugipedia1040350.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>終戒超獸<rt>テカネローグ</rt></ruby>－ヴァルドラス
-  ja_romaji: Tekanerōgu - Varudorasu
+  ja: <ruby>終戒超獸<rt>デカネローグ</rt></ruby>－ヴァルドラス
+  ja_romaji: Dekanerougu - Varudorasu
   ko:
   ko_rr:
   zh-TW:
