--- a/data/cards/30989084.yaml
+++ b/data/cards/30989084.yaml
@@ -1,7 +1,7 @@
 konami_id: 19505
 password: 30989084
 name:
-  en: Aromalylith Rosemary
+  en: Aromalilith Rosemary
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Plant monsters
-    If this card is Special Summoned: You can add 1 "Aroma" card from your Deck to your hand. If you gain LP (even during the Damage Step): You can Special Summon up to 3 "Aroma" monsters from your hand to your zones this card points to. You can Tribute 1 monster this card points to, then target 1 card on the field; banish it, and if you do, gain 1000 LP. You can only use each effect of "Aromalylith Rosemary" once per turn.
+    If this card is Special Summoned: You can add 1 "Aroma" card from your Deck to your hand. If you gain LP, even during the Damage Step: You can Special Summon up to 3 "Aroma" monsters from your hand to your zones this card points to. You can Tribute 1 monster this card points to, then target 1 card on the field; banish it, and if you do, gain 1000 LP. You can only use each effect of "Aromalilith Rosemary" once per turn.
   de:
   es:
   fr:
@@ -49,8 +49,28 @@ series:
 - Rose
 images:
 - index: 1
-  image: AromalylithRosemary-PHNI-JP-UR.png
+  image: AromalilithRosemary-PHNI-JP-UR.png
 sets:
+  en:
+  - set_number: PHNI-EN050
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE050
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR050
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT050
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT050
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP050
     set_name: Phantom Nightmare
@@ -93,9 +113,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1022869
