--- a/data/cards/51073802.yaml
+++ b/data/cards/51073802.yaml
@@ -1,7 +1,7 @@
 konami_id: 19478
 password: 51073802
 name:
-  en: Majespecter Porcupine - Yamaarashi
+  en: Majespecter Porcupine - Yamarashi
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 威风魔灵・山颪豪猪
 text:
   en: |-
-    While this card is in your Monster Zone, your opponent cannot target it with card effects, also it cannot be destroyed by your opponent's card effects. You can only use each of the following effects of "Majespecter Porcupine - Yamaarashi" once per turn. During the Main Phase, if you control a "Majespecter" monster (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can target 1 "Majespecter" Spell in your GY; Set it.
+    During the Main Phase, if you control a "Majespecter" monster (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can target 1 "Majespecter" Spell in your GY; Set it. You can only use each of the previous effects of "Majespecter Porcupine - Yamarashi" once per turn. While this card is in your Monster Zone, your opponent cannot target it with card effects, also it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -53,8 +53,28 @@ series:
 - Majespecter
 images:
 - index: 1
-  image: MajespecterPorcupineYamaarashi-PHNI-JP-C.png
+  image: MajespecterPorcupineYamarashi-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN023
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE023
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR023
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT023
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT023
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP023
     set_name: Phantom Nightmare
@@ -73,9 +93,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012222
