--- a/data/cards/51250293.yaml
+++ b/data/cards/51250293.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 威风魔灵・乘风
 text:
   en: |-
-    (When you activate this card, you can also Tribute 1 WIND Spellcaster monster.) Special Summon 1 "Majespecter" monster from your hand or GY, or, if you Tributed a monster at activation, you can Special Summon it from your Deck instead. You can only activate 1 "Majespecter Wind" per turn.
+    When you activate this card, you can also Tribute 1 WIND Spellcaster monster; Special Summon 1 "Majespecter" monster from your hand or GY, or if you Tributed a monster at activation, you can Special Summon 1 "Majespecter" monster from your Deck instead. You can only activate 1 "Majespecter Wind" per turn.
   de:
   es:
   fr:
@@ -38,6 +38,26 @@ images:
 - index: 1
   image: MajespecterWind-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN069
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE069
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR069
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT069
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT069
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP069
     set_name: Phantom Nightmare
@@ -56,9 +76,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012235
