--- a/data/cards/99529628.yaml
+++ b/data/cards/99529628.yaml
@@ -1,7 +1,7 @@
 konami_id: 19470
 password: 99529628
 name:
-  en: Kiif, Haze of the Ghoti
+  en: Keaf, Murk of the Ghoti
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 游魊之胧 基夫
 text:
   en: |-
-    If a Fish monster is on the field: You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 of them and 1 of your banished Level 6 or lower Fish monsters; banish both that opponent's target and this card, and if you do, Special Summon your targeted monster. During the Standby Phase of the next turn after this card was banished: You can Special Summon this banished card. You can only use each effect of "Kiif, Haze of the Ghoti" once per turn.
+    If a Fish monster is on the field: You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 of those monsters and 1 of your banished Level 6 or lower Fish monsters; banish both that opponent's monster and this card, and if you do, Special Summon your targeted monster. During the Standby Phase of the next turn after this card was banished: You can Special Summon this banished card. You can only use each effect of "Keaf, Murk of the Ghoti" once per turn.
   de:
   es:
   fr:
@@ -41,8 +41,28 @@ series:
 - Ghoti
 images:
 - index: 1
-  image: KiifHazeoftheGhoti-PHNI-JP-C.png
+  image: KeafMurkoftheGhoti-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN015
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE015
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR015
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT015
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT015
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP015
     set_name: Phantom Nightmare
@@ -61,9 +81,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1020459
