--- a/data/cards/26523337.yaml
+++ b/data/cards/26523337.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 游魊之月夜 赛克斯
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 Fish monster from your Deck to your hand, except "Psiics, Moonlight of the Ghoti", then banish 1 Fish monster from your hand or face-up field. If this card is banished: You can banish 1 Fish monster from your hand, face-up field, or GY, except "Psiics, Moonlight of the Ghoti"; Special Summon this card. You can only use each effect of "Psiics, Moonlight of the Ghoti" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 Fish monster from your Deck to your hand, except "Psiics, Moonlight of the Ghoti", then banish 1 Fish monster from your hand or face-up field. If this card is banished: You can banish 1 Fish monster from your hand, GY, or face-up field, except "Psiics, Moonlight of the Ghoti"; Special Summon this card. You can only use each effect of "Psiics, Moonlight of the Ghoti" once per turn.
   de:
   es:
   fr:
@@ -42,6 +42,26 @@ images:
 - index: 1
   image: PsiicsMoonlightoftheGhoti-PHNI-JP-C.png
 sets:
+  en:
+  - set_number: PHNI-EN016
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DE016
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FR016
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-IT016
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PT016
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP016
     set_name: Phantom Nightmare
@@ -60,9 +80,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1020460
