--- a/data/cards/66384688.yaml
+++ b/data/cards/66384688.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Pendulum Monsters, including a "Majespecter" monster
-    If this card is Link Summoned: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except "Majespecter" and "Dracoslayer" monsters, also add up to 2 face-up "Majespecter" Pendulum Monsters from your Extra Deck to your hand, then you can add up to 2 "Majespecter" Pendulum Monsters with different names from each other from your Deck to your Extra Deck face-up. You can only use this effect of "Majespecter Orthrus - Nue" once per turn.
+    If this card is Link Summoned: You can add up to 2 face-up "Majespecter" Pendulum Monsters from your Extra Deck to your hand, then you can add up to 2 "Majespecter" Pendulum Monsters with different names from your Deck to your Extra Deck face-up, also you cannot Special Summon from the Extra Deck for the rest of this turn, except "Majespecter" or "Dracoslayer" monsters. You can only use this effect of "Majespecter Orthrus - Nue" once per turn.
   de:
   es:
   fr:
@@ -47,6 +47,36 @@ images:
 - index: 1
   image: MajespecterOrthrusNue-PHNI-JP-R.png
 sets:
+  en:
+  - set_number: PHNI-EN051
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE051
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR051
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT051
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT051
+    set_name: Phantom Nightmare
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP051
     set_name: Phantom Nightmare
@@ -65,9 +95,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012232
