--- a/data/cards/69122763.yaml
+++ b/data/cards/69122763.yaml
@@ -8,7 +8,7 @@ name:
   it: Patto del Fantasma
   pt:
   ja: <ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>霊<rt>れい</rt></ruby>のお<ruby>守<rt>まも</rt></ruby>り
-  ja_romaji: Shugorei no o Mamori
+  ja_romaji: Shugorei no Omamori
   ko: 수호령의 부적
   ko_rr:
   zh-TW:
